overlay/minikube/ingresses/thanos-query-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-frontend
spec:
  rules:
    - host: thanos-query-frontend.wayne.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-query-frontend
                port:
                  name: http
