overlay/minikube/ingresses/thanos-query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
spec:
  rules:
    - host: thanos-query.wayne.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: thanos-query
                port:
                  number: 10902
